# goal-devin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/goal_devin/: __init__.py  __main__.py  cli.py  core.py  tui.py  worktree.py
tests/: test_cli.py  test_core.py  test_tui.py  test_worktree.py
