[project]
name = "goal-devin"
version = "0.6.0"
description = "Unbounded goal-loop wrapper around the Devin CLI — burn free GLM 5.2 / Kimi K 2.7 tokens toward a fixed goal"
readme = "README.md"
authors = [{ name = "Kartik Kabadi", email = "1kartikkabadi1@gmail.com" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = []
keywords = ["devin", "cli", "agent", "loop", "goal", "glm", "kimi", "automation", "coding-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/kartikkabadi/goal-devin"
Repository = "https://github.com/kartikkabadi/goal-devin"
Issues = "https://github.com/kartikkabadi/goal-devin/issues"
Changelog = "https://github.com/kartikkabadi/goal-devin/blob/main/CHANGELOG.md"

[project.scripts]
goal-devin = "goal_devin.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
]
